<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath/>
    </parent>

    <groupId>com.mtfm</groupId>
    <artifactId>deadman-admin</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>deadman-admin</name>
    <description>Deadman Switch 管理后台</description>

    <modules>
        <module>deadman-common</module>
        <module>deadman-core</module>
        <module>plugins/deadman-plugin-data-scope</module>
        <module>deadman-system</module>
        <module>deadman-notification</module>
        <module>deadman-security</module>
        <module>plugins/deadman-plugin-websocket</module>
        <module>plugins/deadman-plugin-wechat</module>
        <module>plugins/deadman-plugin-excel</module>
        <module>extensions/deadman-extension-file</module>
        <module>plugins/deadman-plugin-storage-local</module>
        <module>plugins/deadman-plugin-storage-oss</module>
        <module>extensions/deadman-extension-pay</module>
        <module>plugins/deadman-plugin-pay-wechat</module>
        <module>extensions/deadman-extension-logistics</module>
        <module>plugins/deadman-plugin-logistics-kuaidi100</module>
        <module>components/deadman-component-client</module>
        <module>support/deadman-support-wechat</module>
        <module>support/deadman-support-client-wechat</module>
        <module>support/deadman-support-client-file</module>
        <module>deadman-app</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <mybatis-plus.version>3.5.16</mybatis-plus.version>
        <jjwt.version>0.12.6</jjwt.version>
        <easyexcel.version>4.0.3</easyexcel.version>
        <aliyun-oss.version>3.18.1</aliyun-oss.version>
        <wechatpay-java.version>0.2.17</wechatpay-java.version>
        <kuaidi100-sdk.version>1.1.3</kuaidi100-sdk.version>
        <spotless.version>2.44.3</spotless.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.mtfm</groupId>
                <artifactId>deadman-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mtfm</groupId>
                <artifactId>deadman-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mtfm</groupId>
                <artifactId>deadman-system</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mtfm</groupId>
                <artifactId>deadman-notification</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mtfm</groupId>
                <artifactId>deadman-security</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mtfm</groupId>
                <artifactId>deadman-plugin-websocket</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mtfm</groupId>
                <artifactId>deadman-component-client</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mtfm</groupId>
                <artifactId>deadman-plugin-wechat</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mtfm</groupId>
                <artifactId>deadman-support-wechat</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mtfm</groupId>
                <artifactId>deadman-support-client-wechat</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mtfm</groupId>
                <artifactId>deadman-plugin-excel</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mtfm</groupId>
                <artifactId>deadman-extension-file</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mtfm</groupId>
                <artifactId>deadman-plugin-storage-local</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mtfm</groupId>
                <artifactId>deadman-plugin-storage-oss</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mtfm</groupId>
                <artifactId>deadman-extension-pay</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mtfm</groupId>
                <artifactId>deadman-plugin-pay-wechat</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mtfm</groupId>
                <artifactId>deadman-extension-logistics</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mtfm</groupId>
                <artifactId>deadman-plugin-logistics-kuaidi100</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mtfm</groupId>
                <artifactId>deadman-support-client-file</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.kuaidi100-api</groupId>
                <artifactId>sdk</artifactId>
                <version>${kuaidi100-sdk.version}</version>
            </dependency>
            <dependency>
                <groupId>com.aliyun.oss</groupId>
                <artifactId>aliyun-sdk-oss</artifactId>
                <version>${aliyun-oss.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.wechatpay-apiv3</groupId>
                <artifactId>wechatpay-java</artifactId>
                <version>${wechatpay-java.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mtfm</groupId>
                <artifactId>deadman-plugin-data-scope</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>easyexcel</artifactId>
                <version>${easyexcel.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot4-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-jsqlparser</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.springframework.boot</groupId>
                                <artifactId>spring-boot-configuration-processor</artifactId>
                            </path>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>${spotless.version}</version>
                    <configuration>
                        <java>
                            <eclipse>
                                <version>4.33</version>
                                <file>${maven.multiModuleProjectDirectory}/config/formatter/eclipse-codestyle.xml</file>
                            </eclipse>
                            <removeUnusedImports/>
                            <trimTrailingWhitespace/>
                            <endWithNewline/>
                        </java>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
